[package]
name = "nu_plugin_emoji"
version = "0.5.0"
authors = ["Darren Schroeder"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_emoji"
description = "a nushell plugin called emoji"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emojis = "0.6.3"
itertools = "0.13.0"
# for local development, you can use a path dependency
nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.97.2" }
nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.97.2" }
# nu-plugin = "0.80.0"
# nu-protocol = "0.80.0"
