[package]
name = "nu_plugin_emoji"
version = "0.15.0"
authors = ["Darren Schroeder"]
edition = "2024"
repository = "https://github.com/fdncred/nu_plugin_emoji"
description = "a nushell plugin called emoji"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nushell dependencies
nu-plugin = { version = "0.106.0", path = "../nushell/crates/nu-plugin", default-features = false }
nu-protocol = { version = "0.106.0", path = "../nushell/crates/nu-protocol", default-features = false }
nu-path = { version = "0.106.0", path = "../nushell/crates/nu-path", default-features = false }

# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.98.0" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.98.0" }
# nu-path = { path = "../nushell/crates/nu-path", version = "0.98.0" }

emojis = "0.7.0"
itertools = "0.14.0"

[dev-dependencies]
nu-plugin-test-support = { version = "0.106.0", path = "../nushell/crates/nu-plugin-test-support", default-features = false }
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }

[profile.release]
opt-level = "s"     # Optimize for size
strip = "debuginfo"
lto = "thin"

[profile.dev]
opt-level = 0
